--- a/Page3.html
+++ b/Page3.html
@@ -17,7 +17,7 @@
 		<tr>
 			<td><a href="Home.html">Overview</a></td>
 			<td><a href="page1.html">Name History</a></td>
-			<td><a href="page2.html">Page2</a></td>
+			<td><a href="page2.html">Government</a></td>
 			<td><a href="page3.html">Page3</a></td>
 		</tr>
 	</table> 
