--- a/Page2.html
+++ b/Page2.html
@@ -28,6 +28,12 @@
 				<div class="col-sm-6">
 					<h1>Government:</h1>
 					<p>Australia is a constitutional monarchy with a federal division of powers. It uses a parliamentary system of government with Elizabeth II at its apex as the Queen of Australia, a role that is distinct from her position as monarch of the other Commonwealth realms. The Queen resides in the United Kingdom and is represented in Australia by the Governor-General at the federal level and by the Governors at the state level, who by convention act on the advice of her ministers. The most notable exercise to date of the Governor-General's reserve powers outside the Prime Minister's request was the dismissal of the Whitlam Government in the constitutional crisis of 1975.</p>
+					<p>The federal government is separated into three branches:</p>
+					<ol>
+					<p><li>The legislature: the bicameral Parliament, defined in section 1 of the constitution as comprising the Queen (represented by the Governor-General), the Senate, and the House of Representatives;</li></p>
+					<p><li>The executive: the Federal Executive Council, in practice the Governor-General as advised by the Prime Minister and Ministers of State;</li></p>
+					<p><li>The judiciary: the High Court of Australia and other federal courts, whose judges are appointed by the Governor-General on advice of the Council.</li></p>
+					</ol>
 				</div>
 			</div>
 		</div>
