Final Link Added

--- a/Home.html
+++ b/Home.html
@@ -18,7 +18,7 @@
 			<td><a href="Home.html">Overview</a></td>
 			<td><a href="page1.html">Name History</a></td>
 			<td><a href="page2.html">Government</a></td>
-			<td><a href="page3.html">Page3</a></td>
+			<td><a href="page3.html">States and Territories</a></td>
 		</tr>
 	</table> 
 	</ul> 
