--- a/Page3.html
+++ b/Page3.html
@@ -4,7 +4,7 @@
 		<meta charset="utf-8">
 		<meta http-equiv="X-UA-Compatible" content="IE=edge"
 		<meta name="viewport" content="width=device-width, initial-scale=1">
-		<title>Australia Overview</title>
+		<title>States and Territories</title>
 		<link rel="stylesheet" type="text/css" href="WebsiteStyles.css">
 	</head>
 	<body>
@@ -18,7 +18,7 @@
 			<td><a href="Home.html">Overview</a></td>
 			<td><a href="page1.html">Name History</a></td>
 			<td><a href="page2.html">Government</a></td>
-			<td><a href="page3.html">Page3</a></td>
+			<td><a href="page3.html">States and Territories</a></td>
 		</tr>
 	</table> 
 	</ul> 
@@ -26,7 +26,7 @@
 			</div>
 			<div class="row">
 				<div class="col-sm-6">
-					<h1>Overview:</h1>
+					<h1>States and Territories:</h1>
 					<p>Australia is an Oceanian country comprising the mainland of the Australian continent, the island of Tasmania, and numerous smaller islands. It is the world's sixth-largest country by total area. Neighbouring countries include Papua New Guinea, Indonesia and East Timor to the north; the Solomon Islands and Vanuatu to the north-east; and New Zealand to the south-east.</p>
 
 <p>For about 50,000 years before the first British settlement in the late 18th century, Australia was inhabited by indigenous Australians, who spoke languages grouped into roughly 250 language groups. After the European discovery of the continent by Dutch explorers in 1606, Australia's eastern half was claimed by Great Britain in 1770 and initially settled through penal transportation to the colony of New South Wales from 26 January 1788. The population grew steadily in subsequent decades; the continent was explored and an additional five self-governing crown colonies were established. On 1 January 1901, the six colonies federated, forming the Commonwealth of Australia. Since federation, Australia has maintained a stable liberal democratic political system that functions as a federal parliamentary democracy and constitutional monarchy comprising six states and several territories. The population of 23.6 million is highly urbanised and heavily concentrated in the eastern states and on the coast.</p>
