Added Info and small style change

--- a/Page3.html
+++ b/Page3.html
@@ -27,11 +27,18 @@
 			<div class="row">
 				<div class="col-sm-6">
 					<h1>States and Territories:</h1>
-					<p>Australia is an Oceanian country comprising the mainland of the Australian continent, the island of Tasmania, and numerous smaller islands. It is the world's sixth-largest country by total area. Neighbouring countries include Papua New Guinea, Indonesia and East Timor to the north; the Solomon Islands and Vanuatu to the north-east; and New Zealand to the south-east.</p>
-
-<p>For about 50,000 years before the first British settlement in the late 18th century, Australia was inhabited by indigenous Australians, who spoke languages grouped into roughly 250 language groups. After the European discovery of the continent by Dutch explorers in 1606, Australia's eastern half was claimed by Great Britain in 1770 and initially settled through penal transportation to the colony of New South Wales from 26 January 1788. The population grew steadily in subsequent decades; the continent was explored and an additional five self-governing crown colonies were established. On 1 January 1901, the six colonies federated, forming the Commonwealth of Australia. Since federation, Australia has maintained a stable liberal democratic political system that functions as a federal parliamentary democracy and constitutional monarchy comprising six states and several territories. The population of 23.6 million is highly urbanised and heavily concentrated in the eastern states and on the coast.</p>
-
-<p>Australia is a developed country and one of the wealthiest in the world, with the world's 12th-largest economy. In 2014 Australia had the world's fifth-highest per capita income. Australia's military expenditure is the world's 13th-largest. With the second-highest human development index globally, Australia ranks highly in many international comparisons of national performance, such as quality of life, health, education, economic freedom, and the protection of civil liberties and political rights. Australia is a member of the United Nations, G20, Commonwealth of Nations, ANZUS, Organisation for Economic Co-operation and Development (OECD), World Trade Organization, Asia-Pacific Economic Cooperation, and the Pacific Islands Forum.</p>
+					<p>Australia has six states—New South Wales (NSW), Queensland (QLD), South Australia (SA), Tasmania (TAS), Victoria (VIC) and Western Australia (WA)—and two major mainland territories—the Australian Capital Territory (ACT) and the Northern Territory (NT). In most respects these two territories function as states, but the Commonwealth Parliament can override any legislation of their parliaments. By contrast, federal legislation overrides state legislation only in areas that are set out in Section 51 of the Australian Constitution; state parliaments retain all residual legislative powers, including those over schools, state police, the state judiciary, roads, public transport and local government, since these do not fall under the provisions listed in Section 51.</p>
+					<p>Each state and major mainland territory has its own parliament—unicameral in the Northern Territory, the ACT and Queensland, and bicameral in the other states. The states are sovereign entities, although subject to certain powers of the Commonwealth as defined by the Constitution. The lower houses are known as the Legislative Assembly (the House of Assembly in South Australia and Tasmania); the upper houses are known as the Legislative Council. The head of the government in each state is the Premier and in each territory the Chief Minister. The Queen is represented in each state by a Governor; and in the Northern Territory, the Administrator. In the Commonwealth, the Queen's representative is the Governor-General.</p>
+					<p>The federal parliament directly administers the following territories:</p>
+					<ul class="a">
+					<li>Ashmore and Cartier Islands</li>
+					<li>Australian Antarctic Territory</li>
+					<li>Christmas Island</li>
+					<li>Cocos (Keeling) Islands</li>
+					<li>Coral Sea Islands</li>
+					<li>Heard Island and McDonald Islands</li>
+					<li>Jervis Bay Territory, a naval base and sea port for the national capital in land that was formerly part of New South Wales</li>
+					</ul>
 				</div>
 			</div>
 		</div>
