--- a/Home.html
+++ b/Home.html
@@ -15,10 +15,10 @@
 	<ul>
 	<table border="1" style="width:100%">
 		<tr>
-			<td><a href="Home.html">Overview</a></td>
-			<td><a href="page1.html">Name History</a></td>
-			<td><a href="page2.html">Government</a></td>
-			<td><a href="page3.html">States and Territories</a></td>
+			<td><a href="Home.html" style="text-decoration:none">Overview</a></td>
+			<td><a href="page1.html" style="text-decoration:none">Name History</a></td>
+			<td><a href="page2.html" style="text-decoration:none">Government</a></td>
+			<td><a href="page3.html" style="text-decoration:none">States and Territories</a></td>
 		</tr>
 	</table> 
 	</ul>
